Adding to the list

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!--          thirteenth person  -->
             <tr>
                 <td>Mildred Aziengbe</td>
-                <td>Maverick City</td>
+                <td>Maverick City Music</td>
                 <td>Edo State</td>
                 <td>4</td>
                 <td><a class="btn btn__female">Female</a></td>
